--- a/EdiTools.Tests/EdiTools.Tests.csproj
+++ b/EdiTools.Tests/EdiTools.Tests.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputPath>bin</OutputPath>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Title>EdiTools.Tests</Title>
